# internal/domain/entities/code/messages.go
@@ -1,9 +1,11 @@
 package code
 
 type CreateCodeData struct {
-	Color string `json:"color" validate:"required"`
+	Color     string `json:"color" validate:"required"`
+	Reasoning string `json:"reasoning" validate:"required"`
 }
 
 type UpdateCodeData struct {
-	Color string `json:"color,omitempty" validate:"omitempty"`
+	Color     string `json:"color,omitempty" validate:"omitempty"`
+	Reasoning string `json:"reasoning,omitempty" validate:"omitempty"`
 }
