# internal/domain/entities/code/reducer.go
@@ -12,13 +12,19 @@ var Reducer = cqrs.CombineReducers(
 
 func CreatedCodeReducer(_ *Code, message *cqrs.Message, payload *CreatedCodePayload) *Code {
 	return &Code{
-		ID:    message.AggregateID,
-		Color: payload.Color,
+		ID:        message.AggregateID,
+		Color:     payload.Color,
+		Reasoning: payload.Reasoning,
 	}
 }
 
 func UpdatedCodeReducer(current *Code, _ *cqrs.Message, payload *UpdateCodePayload) *Code {
-	current.Color = payload.Color
+	if payload.Color != "" {
+		current.Color = payload.Color
+	}
+	if payload.Reasoning != "" {
+		current.Reasoning = payload.Reasoning
+	}
 	return current
 }
 
